--- a/unit-test/openvibe-module-fs/CMakeLists.txt
+++ b/unit-test/openvibe-module-fs/CMakeLists.txt
@@ -36,6 +36,7 @@ target_link_libraries(${PROJECT_NAME}
 					  Boost::boost
 					  Boost::filesystem
 					  GTest::GTest
+					  GTest::Main
 )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${TESTS_FOLDER})	# Place project in folder unit-test (for some IDE)
