--- a/unit-test/openvibe-module-system/CMakeLists.txt
+++ b/unit-test/openvibe-module-system/CMakeLists.txt
@@ -60,6 +60,7 @@ target_link_libraries(${PROJECT_NAME}
 					  openvibe-module-system
 					  openvibe-test-unit-toolkit
 					  GTest::GTest
+					  GTest::Main
 )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${TESTS_FOLDER})
