--- a/unit-test/openvibe-module-xml/CMakeLists.txt
+++ b/unit-test/openvibe-module-xml/CMakeLists.txt
@@ -29,6 +29,7 @@ function(SETUP_TEST)
 						  Boost::boost
 						  Boost::filesystem
 						  GTest::GTest
+						  GTest::Main
 	)
 	
 	set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${TESTS_FOLDER})	# Place project in folder unit-test (for some IDE)
