:rotating_light: Resolve "Update: Dev tools Clang Diagnostique"

--- a/applications/developer-tools/plugin-inspector/CMakeLists.txt
+++ b/applications/developer-tools/plugin-inspector/CMakeLists.txt
@@ -21,7 +21,7 @@
 
 project(openvibe-plugin-inspector-sdk VERSION ${OPENVIBE_MAJOR_VERSION}.${OPENVIBE_MINOR_VERSION}.${OPENVIBE_PATCH_VERSION})
 
-file(GLOB_RECURSE SRC_FILES src/*.cpp src/*.h)
+file(GLOB_RECURSE SRC_FILES src/*.cpp src/*.hpp)
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME}
