--- a/applications/developer-tools/id-generator/CMakeLists.txt
+++ b/applications/developer-tools/id-generator/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT(openvibe-id-generator VERSION ${OPENVIBE_MAJOR_VERSION}.${OPENVIBE_MINOR_VERSION}.${OPENVIBE_PATCH_VERSION})
 
-file(GLOB_RECURSE SRC_FILES src/*.cpp src/*.h src/*.inl)
+file(GLOB_RECURSE SRC_FILES src/*.cpp)
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${APP_FOLDER})
