:recycle: Resolve "Update; CMakelist space"

--- a/applications/developer-tools/plugin-inspector/CMakeLists.txt
+++ b/applications/developer-tools/plugin-inspector/CMakeLists.txt
@@ -25,12 +25,11 @@ file(GLOB_RECURSE SRC_FILES src/*.cpp src/*.hpp)
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME}
-                      openvibe
-                      openvibe-toolkit
-                      openvibe-module-system
-                      openvibe-module-fs
-                      Boost::boost
-) 
+					  openvibe
+					  openvibe-toolkit
+					  openvibe-module-system
+					  openvibe-module-fs
+					  Boost::boost) 
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${APP_FOLDER})
 
@@ -46,7 +45,7 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 install(TARGETS ${PROJECT_NAME}
-        RUNTIME DESTINATION ${DIST_BINDIR}
-        LIBRARY DESTINATION ${DIST_LIBDIR}
-        ARCHIVE DESTINATION ${DIST_LIBDIR})
+		RUNTIME DESTINATION ${DIST_BINDIR}
+		LIBRARY DESTINATION ${DIST_LIBDIR}
+		ARCHIVE DESTINATION ${DIST_LIBDIR})
 
