--- a/plugins/processing/stream-codecs/CMakeLists.txt
+++ b/plugins/processing/stream-codecs/CMakeLists.txt
@@ -6,16 +6,16 @@ include("FindSourceRCProperties")
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME}
-                      openvibe
-                      openvibe-common
-                      openvibe-toolkit
-                      openvibe-module-ebml)
+					  openvibe
+					  openvibe-common
+                      openvibe-module-ebml
+					  openvibe-toolkit)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    VERSION ${PROJECT_VERSION}
-    SOVERSION ${PROJECT_VERSION_MAJOR}
-    FOLDER ${PLUGINS_FOLDER}
-    COMPILE_FLAGS "-DOVP_Exports -DOVP_Shared")
+					  VERSION ${PROJECT_VERSION}
+					  SOVERSION ${PROJECT_VERSION_MAJOR}
+					  FOLDER ${PLUGINS_FOLDER}
+					  COMPILE_FLAGS "-DOVP_Exports -DOVP_Shared")
 
 add_definitions(-DTARGET_HAS_ThirdPartyOpenViBEPluginsGlobalDefines)
 
@@ -25,12 +25,10 @@ add_definitions(-DTARGET_HAS_ThirdPartyOpenViBEPluginsGlobalDefines)
 # ---------------------------------
 SET_BUILD_PLATFORM()
 
-
 # -----------------------------
 # Install files
 # -----------------------------
 install(TARGETS ${PROJECT_NAME}
-        RUNTIME DESTINATION ${DIST_BINDIR}
-        LIBRARY DESTINATION ${DIST_LIBDIR}
-        ARCHIVE DESTINATION ${DIST_LIBDIR})
-
+		RUNTIME DESTINATION ${DIST_BINDIR}
+		LIBRARY DESTINATION ${DIST_LIBDIR}
+		ARCHIVE DESTINATION ${DIST_LIBDIR})
