--- a/modules/ebml/CMakeLists.txt
+++ b/modules/ebml/CMakeLists.txt
@@ -6,23 +6,20 @@ include("FindSourceRCProperties")
 
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
-target_link_libraries(${PROJECT_NAME}
-                      openvibe-common)
+target_link_libraries(${PROJECT_NAME} openvibe-common)
 
-target_include_directories(${PROJECT_NAME}
-                           PUBLIC include)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
-                      VERSION ${PROJECT_VERSION}
-                      SOVERSION ${PROJECT_VERSION_MAJOR}
-                      FOLDER ${MODULES_FOLDER}
-)
+					  VERSION ${PROJECT_VERSION}
+					  SOVERSION ${PROJECT_VERSION_MAJOR}
+					  FOLDER ${MODULES_FOLDER})
 
 target_compile_options(${PROJECT_NAME}
-                       PRIVATE -DEBML_Exports
-                       PUBLIC -DEBML_Shared 
-)
-# ---------------------------------
+					   PRIVATE -DEBML_Exports
+					   PUBLIC -DEBML_Shared)
+
+					   # ---------------------------------
 # Target macros
 # Defines target operating system, architecture and compiler
 # ---------------------------------
@@ -32,8 +29,8 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 install(TARGETS ${PROJECT_NAME}
-        RUNTIME DESTINATION ${DIST_BINDIR}
-        LIBRARY DESTINATION ${DIST_LIBDIR}
-        ARCHIVE DESTINATION ${DIST_LIBDIR})
+		RUNTIME DESTINATION ${DIST_BINDIR}
+		LIBRARY DESTINATION ${DIST_LIBDIR}
+		ARCHIVE DESTINATION ${DIST_LIBDIR})
 
 INSTALL(DIRECTORY include/ DESTINATION ${DIST_INCLUDEDIR} COMPONENT headers FILES_MATCHING PATTERN "*.h")
