--- a/plugins/processing/signal-processing/CMakeLists.txt
+++ b/plugins/processing/signal-processing/CMakeLists.txt
@@ -9,23 +9,21 @@ include("FindSourceDependencyR8Brain")
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME}
-                      openvibe
-                      openvibe-common
-                      openvibe-toolkit
-                      openvibe-module-ebml
-                      openvibe-module-system
-                      openvibe-module-fs
-                      Boost::boost
-                      Eigen3::Eigen
-)
+					  openvibe
+					  openvibe-common
+					  openvibe-toolkit
+					  openvibe-module-system
+					  openvibe-module-fs
+					  Boost::boost
+					  Eigen3::Eigen)
 
 target_include_directories(${PROJECT_NAME} PRIVATE src)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    VERSION ${PROJECT_VERSION}
-    SOVERSION ${PROJECT_VERSION_MAJOR}
-    FOLDER ${PLUGINS_FOLDER}
-    COMPILE_FLAGS "-DOVP_Exports -DOVP_Shared")
+					  VERSION ${PROJECT_VERSION}
+					  SOVERSION ${PROJECT_VERSION_MAJOR}
+					  FOLDER ${PLUGINS_FOLDER}
+					  COMPILE_FLAGS "-DOVP_Exports -DOVP_Shared")
 
 add_definitions(-DTARGET_HAS_ThirdPartyOpenViBEPluginsGlobalDefines)
 add_definitions(-D_USE_MATH_DEFINES)	# Definition for constant math as M_PI
@@ -40,9 +38,9 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 install(TARGETS ${PROJECT_NAME}
-        RUNTIME DESTINATION ${DIST_BINDIR}
-        LIBRARY DESTINATION ${DIST_LIBDIR}
-        ARCHIVE DESTINATION ${DIST_LIBDIR})
+		RUNTIME DESTINATION ${DIST_BINDIR}
+		LIBRARY DESTINATION ${DIST_LIBDIR}
+		ARCHIVE DESTINATION ${DIST_LIBDIR})
 
 INSTALL(DIRECTORY box-tutorials/ DESTINATION ${DIST_DATADIR}/openvibe/scenarios/box-tutorials)
 
